feat: 收敛学生首页与分析中心权限口径